--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.22.0",
     "bootstrap": "^5.1.1",
     "chart.js": "^3.5.1",
+    "cuid": "^2.1.8",
     "history": "^5.0.1",
     "moment": "^2.29.1",
     "plotly.js": "^2.5.1",
@@ -29,6 +30,7 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
